...
      },
      child: SafeArea(
        child: Scaffold(
          appBar: AppBar(
            backgroundColor: Colors.transparent,
            surfaceTintColor: Colors.transparent,
            title: const Text('Cards'),
            actions: [
              !_selectionModeEnabled ? Container() : IconButton(
                icon: const Icon(Icons.deselect_rounded), 
                tooltip: 'Deselect all',
                onPressed: () {
                  _updateCards();
...
                onPressed: () {
                  _performSelectionAction(SelectionAction.delete);
                },
              ),
              IconButton(
                icon: const Icon(Icons.add_rounded),
                tooltip: 'Add card',
                onPressed: () {
                  Navigator.push(
                    context,
                    MaterialPageRoute(builder: (context) => EditCardPage()),
                  ).then((value) => _updateCards());
                },
...
