...
                  },
                  onLongPress: _showLibrary ? null : () {
                    epubViewerController.previousChapter(goToFirstPage: true);
                  },
                ),
                IconButton(
                  key: const Key('nextPageButton'),
                  tooltip: 'Next page',
                  icon: const Icon(Icons.navigate_next_rounded),
                  onPressed: _showLibrary ? null : () {
                    epubViewerController.nextPage();
                  },
                  onLongPress: _showLibrary ? null : () {
...
