...
              progress < 1.0 || _isLoading
                  ? Container(height: double.infinity, width: double.infinity, color: Theme.of(context).colorScheme.surface, child: Column(
                    children: [
                      LinearProgressIndicator(value: progress),
                    ],
                  ))
                  : Container(key: Key('webViewIsLoaded'),),
            ],
          ),
        ),
      ],
    );
  }
...
